[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Patrick", email = "patrsc@nubu.at"},
]
dependencies = [
    "toml>=0.10.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
